css/style.css
html {
  box-sizing: border-box;
}
*, 
*::before, 
*::after { 
  box-sizing: inherit;
}
:root {
  font-size: 62.5%;
}
body {
  background-color: #201d1d; 
}
.board {
  cursor: url('../assets/WandD.cur'), auto  !important;
  font-family: 'Gideon Roman', 'Oranienbaum', 'PT Serif', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  margin: 0;
  background-image: url("../assets/castleFire2.jpeg"); 
  background-repeat: no-repeat;
  border-radius: 8px;
  display: flex;
  height: 100vh;
  width: auto;
  flex-direction: column;
  align-items: center;
}
h1 {
  align-items: center;
  color: #c43b16;
  font-style: bold;
  font-weight: 700;
  display: flex;
  flex-direction: row;
  height: 100px;
  justify-content: center;
}
h3 {
  background-color: gray;
  outline-width: 15px;
  border-color: black;
  align-items: center;
  display: flex;
  flex-direction: row;
  height: 30px;
  justify-content: center;
  margin-bottom: 50px;
}
div.battle {
  align-items: center; 
  display: flex;
  flex-direction: row;
  height: 100px;
  justify-content: center;
  -ms-flex-align: center;
}
div.players {
  align-items: center; 
  display: flex;
  flex-direction: row;
  height: 100px;
  justify-content: space-around;
  -ms-flex-align: center;
}
div.replay {
  align-items: center; 
  display: flex;
  flex-direction: row;
  height: 100px;
  justify-content: space-around;
  -ms-flex-align: center;
}
h6 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border-radius: 4px;
  padding: 5px;
  width: 500px;
}
.battlefield {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  flex: 2;
  column-gap: 30px; 
  width: 100%;
}
#gameOverBtn {
  outline: 50px black;
  background-color: #f7de71;
  align-content: space-around;
  flex-flow: row;
  height: 50px;
  width: 80px;
}
#deck-start1:hover {
  transition: width 2s, height 4s transform 2s;
  transition-timing-function: ease;
  /* width: 300px; */
}
@media only screen and (min-width: 600px){
  body {
  width: 900px;
  display: grid;
  grid-template-columns: 40% 60%;
  grid-template-rows: auto auto auto auto;
  grid-template-areas: 
    "title"
    "message"
    "battlefield"
    "players"
  }
}
.title {
  grid-area: title;
  text-align: center;
  justify-content: center;
}
.message {
  grid-area: message;
  font-style: bold;
  text-align: center;
  margin-top: auto;
  
}
#battlefield{
  grid-area: battlefield;
  text-align: center;
  justify-content: center;
  -ms-flex-align: center;
}
#players{
  grid-area: players;
  text-align: center;
  justify-content: space-around;
  -ms-flex-align: center;
}

